<resources>
	<string name="app_name">Gamma App</string>
	<string name="maths">Maths and Science Resources</string>
	<string name="Grade_8_12">Grade 8 - 12</string>
	<string name="Grade_8_9">Grade 8 - 9</string>
	<string name="powerpoint">Maths PowerPoint Lessons</string>
	<string name="physics">Physical Science Materials</string>
	<string name="Grade_10_12">Grade 10 - 12</string>
	<string name="all_grades">All Grade</string>
	<string name="m_book">Mathematics Textbooks</string>
	<string name="caps">CAPS Exams Support</string>
	<string name="support">STEAM Education Support</string>
	<string name="m_material">Maths Reference Materials</string>
	<string name="m_resource">Maths Literacy Resources</string>
	<string name="ml_resource">Maths Literacy Resources</string>
	<string name="geo">GeoGebra Materials</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="title">Title</string>
	<string name="description">Description</string>
	<string name="add_image">addImage</string>
	<string name="delete_image">deleteImage</string>
	<string name="thumbnail">thumbnail</string>
	<string-array name="nav_drawer_labels">
		<item>Birds</item>
		<item>Animal</item>
		<item>Forest</item>
		<item>Ocean</item>
		<item>Planets</item>
		<item>Landscape</item>
	</string-array>
	<string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
	<string name="delete">Delete</string>
	<string name="search">Search</string>
	<string name="settings">Settings</string>
	<string name="edit">Edit</string>
	<string name="exit">Exit</string>>
	<string name="desmos">Desmos</string>
	<string name="desmos_app">Application for Geometry</string>
	<string name="pythagoras">Pythagoras</string>
	<string name="pythagoras_app">Geometry and Algebra</string>
	<string name="euclidea">Euclidea</string>
	<string name="euclidea_app">Application for Geometry</string>
	<string name="fraction_steps_by_steps">Fraction Steps by Steps</string>
	<string name="fraction_steps_by_steps_app">Algebra and Calculus</string>
	<string name="mostela">MoStela</string>
	<string name="mostela_app">3D visualisation</string>
	<string name="geoGebra_graphing">GeoGebra Graphing</string>
	<string name="geoGebra_graphing_app">Geometry and Algebra</string>
</resources>
